# agl-cluster-demo-dashboard

./: .gitreview  CMakeLists.txt
app/: CMakeLists.txt  DashboardGaugeStyle.qml  TachometerStyle.qml  ValueSource.qml  cluster-gauges.qml  main.cpp
conf.d/cmake/: config.cmake
conf.d/wgt/: config.xml.in
